--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -20,7 +20,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "from sklearn.metrics import accuracy_score"
    ]
@@ -738,8 +738,8 @@
     {
      "data": {
       "text/plain": [
-       "high_risk    6090\n",
        "low_risk     6090\n",
+       "high_risk    6090\n",
        "Name: loan_status, dtype: int64"
       ]
      },
@@ -886,7 +886,7 @@
     "\n",
     "# defining our features and label\n",
     "X = train_df.drop(['loan_status'], axis =1)\n",
-    "y = train_df['loan_status']\n",
+    "y = LabelEncoder().fit_transform(train_df['loan_status'])\n",
     "\n",
     "# convert the string to numeric variable\n",
     "# X_train = pd.get_dummies(X)\n",
@@ -911,7 +911,7 @@
     "# Convert categorical data to numeric and separate target feature for testing data\n",
     "# defining our features and label\n",
     "X = test_df.drop(['loan_status'], axis =1)\n",
-    "y = test_df['loan_status']\n",
+    "y = LabelEncoder().fit_transform(test_df['loan_status'])\n",
     "\n",
     "# convert the string to numeric variable\n",
     "\n",
@@ -2069,28 +2069,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2099,28 +2099,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4697</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4698</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4699</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4700</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4701</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2128,18 +2128,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     Prediction     Actual\n",
-       "0      low_risk   low_risk\n",
-       "1      low_risk   low_risk\n",
-       "2      low_risk   low_risk\n",
-       "3     high_risk   low_risk\n",
-       "4      low_risk   low_risk\n",
-       "...         ...        ...\n",
-       "4697   low_risk  high_risk\n",
-       "4698   low_risk  high_risk\n",
-       "4699   low_risk  high_risk\n",
-       "4700   low_risk  high_risk\n",
-       "4701  high_risk  high_risk\n",
+       "      Prediction  Actual\n",
+       "0              1       1\n",
+       "1              1       1\n",
+       "2              1       1\n",
+       "3              0       1\n",
+       "4              1       1\n",
+       "...          ...     ...\n",
+       "4697           1       0\n",
+       "4698           1       0\n",
+       "4699           1       0\n",
+       "4700           1       0\n",
+       "4701           0       0\n",
        "\n",
        "[4702 rows x 2 columns]"
       ]
@@ -2190,8 +2190,8 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "   high_risk       0.53      0.30      0.38      2351\n",
-      "    low_risk       0.51      0.73      0.60      2351\n",
+      "           0       0.53      0.30      0.38      2351\n",
+      "           1       0.51      0.73      0.60      2351\n",
       "\n",
       "    accuracy                           0.52      4702\n",
       "   macro avg       0.52      0.52      0.49      4702\n",
@@ -2259,28 +2259,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2289,28 +2289,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4697</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4698</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4699</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4700</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4701</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2318,18 +2318,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     Prediction     Actual\n",
-       "0      low_risk   low_risk\n",
-       "1      low_risk   low_risk\n",
-       "2      low_risk   low_risk\n",
-       "3     high_risk   low_risk\n",
-       "4      low_risk   low_risk\n",
-       "...         ...        ...\n",
-       "4697  high_risk  high_risk\n",
-       "4698   low_risk  high_risk\n",
-       "4699  high_risk  high_risk\n",
-       "4700  high_risk  high_risk\n",
-       "4701  high_risk  high_risk\n",
+       "      Prediction  Actual\n",
+       "0              1       1\n",
+       "1              1       1\n",
+       "2              1       1\n",
+       "3              0       1\n",
+       "4              1       1\n",
+       "...          ...     ...\n",
+       "4697           0       0\n",
+       "4698           1       0\n",
+       "4699           0       0\n",
+       "4700           0       0\n",
+       "4701           0       0\n",
        "\n",
        "[4702 rows x 2 columns]"
       ]
@@ -2379,8 +2379,8 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "   high_risk       0.60      0.79      0.68      2351\n",
-      "    low_risk       0.69      0.47      0.56      2351\n",
+      "           0       0.60      0.79      0.68      2351\n",
+      "           1       0.69      0.47      0.56      2351\n",
       "\n",
       "    accuracy                           0.63      4702\n",
       "   macro avg       0.65      0.63      0.62      4702\n",
@@ -2482,28 +2482,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2512,28 +2512,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4697</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4698</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4699</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4700</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4701</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2541,18 +2541,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     Prediction     Actual\n",
-       "0     high_risk   low_risk\n",
-       "1      low_risk   low_risk\n",
-       "2      low_risk   low_risk\n",
-       "3      low_risk   low_risk\n",
-       "4      low_risk   low_risk\n",
-       "...         ...        ...\n",
-       "4697   low_risk  high_risk\n",
-       "4698   low_risk  high_risk\n",
-       "4699  high_risk  high_risk\n",
-       "4700  high_risk  high_risk\n",
-       "4701  high_risk  high_risk\n",
+       "      Prediction  Actual\n",
+       "0              0       1\n",
+       "1              1       1\n",
+       "2              1       1\n",
+       "3              1       1\n",
+       "4              1       1\n",
+       "...          ...     ...\n",
+       "4697           1       0\n",
+       "4698           1       0\n",
+       "4699           0       0\n",
+       "4700           0       0\n",
+       "4701           0       0\n",
        "\n",
        "[4702 rows x 2 columns]"
       ]
@@ -2603,8 +2603,8 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "   high_risk       0.55      0.68      0.61      2351\n",
-      "    low_risk       0.58      0.44      0.50      2351\n",
+      "           0       0.55      0.68      0.61      2351\n",
+      "           1       0.58      0.44      0.50      2351\n",
       "\n",
       "    accuracy                           0.56      4702\n",
       "   macro avg       0.56      0.56      0.55      4702\n",
@@ -2679,28 +2679,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>high_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>low_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2709,28 +2709,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4697</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4698</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4699</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4700</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4701</th>\n",
-       "      <td>low_risk</td>\n",
-       "      <td>high_risk</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2738,18 +2738,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     Prediction     Actual\n",
-       "0      low_risk   low_risk\n",
-       "1      low_risk   low_risk\n",
-       "2      low_risk   low_risk\n",
-       "3     high_risk   low_risk\n",
-       "4      low_risk   low_risk\n",
-       "...         ...        ...\n",
-       "4697   low_risk  high_risk\n",
-       "4698   low_risk  high_risk\n",
-       "4699   low_risk  high_risk\n",
-       "4700   low_risk  high_risk\n",
-       "4701   low_risk  high_risk\n",
+       "      Prediction  Actual\n",
+       "0              1       1\n",
+       "1              1       1\n",
+       "2              1       1\n",
+       "3              0       1\n",
+       "4              1       1\n",
+       "...          ...     ...\n",
+       "4697           1       0\n",
+       "4698           1       0\n",
+       "4699           1       0\n",
+       "4700           1       0\n",
+       "4701           1       0\n",
        "\n",
        "[4702 rows x 2 columns]"
       ]
@@ -2800,8 +2800,8 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "   high_risk       0.46      0.31      0.37      2351\n",
-      "    low_risk       0.48      0.64      0.55      2351\n",
+      "           0       0.46      0.31      0.37      2351\n",
+      "           1       0.48      0.64      0.55      2351\n",
       "\n",
       "    accuracy                           0.47      4702\n",
       "   macro avg       0.47      0.47      0.46      4702\n",
