--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "#dependancies \n",
+    "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
@@ -2009,8 +2010,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unscaled LogisticRegression Training Score:0.649671592775041\n",
-      "Unscaled LogisticRegression Testing Score:0.5161633347511697\n"
+      "Unscaled LogisticRegression Training Score:0.6497536945812807\n",
+      "Unscaled LogisticRegression Testing Score:0.5157379838366652\n"
      ]
     },
     {
@@ -2164,7 +2165,7 @@
      "data": {
       "text/plain": [
        "array([[ 702, 1649],\n",
-       "       [ 626, 1725]], dtype=int64)"
+       "       [ 628, 1723]], dtype=int64)"
       ]
      },
      "execution_count": 19,
@@ -2839,10 +2840,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving model\n",
+    "pickle.dump(clf, open('Model/model.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "credit_df = pd.DataFrame({\"rooms\": [2],\n",
+    "                        \"distance\" : [3.5],\n",
+    "                        \"bathroom\" : [1],\t\n",
+    "                        \"car\" : [1],\n",
+    "                        \"type\" : [0],\n",
+    "                        \"region\" : [0]}) \n",
+    "                       \t\n",
+    "# Create the index\n",
+    "credit_df= ['0']\n",
+    "  \n",
+    "# Set the index\n",
+    "credit_df.index = index_"
+   ]
   }
  ],
  "metadata": {
